Cocoa2d-HTLM5 game apepars to use wrong vertex buffer data https://bugs.webkit.org/show_bug.cgi?id=236427 <rdar://problem/87136345>

Reviewed by Kimmo Kinnunen.

Render encoder appears to carry stale state when a vertex array's element
buffer is updated, but no other parts of the buffer are updated. Reassign
vertex buffer bindings in this case, which clears up corruption
(Squished rendering elements, incorrect UV's)

* src/libANGLE/renderer/metal/VertexArrayMtl.h:
* src/libANGLE/renderer/metal/VertexArrayMtl.mm:
(rx::VertexArrayMtl::syncState):
(rx::VertexArrayMtl::setupDraw):



Canonical link: https://commits.webkit.org/247152@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289664 268f45cc-cd09-0410-ab3c-d52691b4dbfc